修改标题，清空js

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="styles/style.css" rel="stylesheet" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <title>My test page</title>
+    <title>Jinpxx</title>
   </head>
   <body>
     <h1>超级无敌可爱小猫</h1>
@@ -26,7 +26,6 @@
       猫猫一家亲，
       <a href="https://www.baidu.com">芝士雪豹</a>
     </p>
-    <!-- <button>切换用户</button> -->
     <script src="scripts/main.js" defer></script>
   </body>
 </html>
